# TrashUQ

./: .env.example  .gitignore  Containerfile  MQTT_README.md  PART_A_Arduino_Mixed_Test_Report_FILLED.md  README.md  README_REAL_EDGE_DASHBOARD.md  compose.yaml  mosquitto-websockets.conf  package-lock.json  package.json  presentation.tex  pyproject.toml  tailwind.config.js  test_webcam.py
Paper/: PART_A_Arduino_Mixed_Test_Report_SHORT.md  TEST_PLAN_FL.md
app/: config.py  db.py  globals.css  layout.tsx  page.tsx  schemas.py
backend/: Containerfile  README.md  requirements.txt
backend/app/: config.py  db.py  fl_coordinator.py  fl_pb2.py  fl_pb2_grpc.py  grpc_server.py  main.py  mqtt_runtime.py  service.py
benchmarks/: bench_inference.py  bench_mqtt.py
bin_mcu/: bin_mcu.ino
bin_mpu/: camera.py  classifier.py  config.py  finetuner.py  fl_client.py  labeling_server.py  main.py  mqtt_telemetry.py  pipeline.py  serial_protocol.py
components/ui/: badge.tsx
data/: dashboard.sqlite
db/migrations/: 001_init.sql
docs/paper/: Part_B_FL_Simulation_Report_completed.md  README.md  TrashUQ_Technical_Report.md  export_pdf.sh
docs/presentation/: README.md  export_pdf.js  export_pdf.sh  (+1 more)
edge/: .gitmodules  README.md  _demo_ui.py  deploy.sh  pyproject.toml  setup_data.py
frontend/: Containerfile  next.config.mjs  package-lock.json  package.json
lib/: dashboard-db.ts
mockups/: README.md
mqtt/: mosquitto.conf
scripts/: db-migrate.mjs  db-reset.mjs  db-status.mjs  mosquitto-hardening.sh  mqtt-simulator.sh
tests/: test_classifier.py  test_pipeline_states.py
(+65 files in other folders)
