[project]
name = "trashnet"
version = "0.1.0"
description = "Smart trash bin with computer vision classification"
requires-python = ">=3.11"
dependencies = [
    "opencv-python>=4.9",
    "paho-mqtt>=2.0",
    "httpx>=0.27",
    "pyserial>=3.5",
    "fastapi>=0.111",
    "uvicorn>=0.29",
    "grpcio>=1.60",
    "protobuf>=4.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
train = [
    "tensorflow>=2.16",
    "numpy>=1.26",
]
# Install this extra only on the MPU hardware (Python 3.11, Linux ARM)
hardware = [
    "tflite-runtime>=2.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bin_mpu"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["bin_mpu/fl_pb2.py", "bin_mpu/fl_pb2_grpc.py"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
strict = true
